se crea el curd rest de prodcuto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port= 8081
 
 #modificando el path o ruta
-server.servlet.context-path =/apprest
+server.servlet.context-path =/app
 
 
 #conexion mariadb
